--- a/example/core_dropdown_menu.html
+++ b/example/core_dropdown_menu.html
@@ -1,9 +1,13 @@
 <!doctype html>
 <!--
-Copyright 2013 The Polymer Authors. All rights reserved.
-Use of this source code is governed by a BSD-style
-license that can be found in the LICENSE file.
+Copyright (c) 2014 The Polymer Project Authors. All rights reserved.
+This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
+The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
+The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
+Code distributed by Google as part of the polymer project is also
+subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
+
 <html>
 <head>
 
@@ -12,143 +16,156 @@ license that can be found in the LICENSE file.
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0,user-scalable=yes">
 
   <title>core-dropdown</title>
+  <link href="packages/core_elements/core_collapse.html" rel="import">
+  <link href="packages/core_elements/core_dropdown.html" rel="import">
+  <link href="packages/core_elements/core_icons.html" rel="import">
+  <link href="packages/core_elements/core_icon_button.html" rel="import">
+  <link href="packages/core_elements/core_item.html" rel="import">
+  <link href="packages/core_elements/core_menu.html" rel="import">
 
   <link rel="import" href="packages/core_elements/core_dropdown_menu.html">
   <style shim-shadowdom>
-    html, body {
-      height: 100%;
+    body {
+      font-family: RobotoDraft, 'Helvetica Neue', Helvetica, Arial;
+      font-size: 14px;
+      margin: 0;
+      padding: 24px;
+      -webkit-tap-highlight-color: rgba(0,0,0,0);
+      -webkit-touch-callout: none;
     }
 
-    dropdown-demo {
-      display: block;
+    section {
+      padding: 20px 0;
     }
 
-    dropdown-demo::shadow > section {
-      padding: 12px;
+    section > div {
+      padding: 14px;
+      font-size: 16px;
     }
 
-    body /deep/ core-dropdown-menu {
+    html /deep/ core-dropdown-menu {
+      box-sizing: border-box;
+      width: 170px;
+    }
+
+    html /deep/ core-dropdown {
+      box-sizing: border-box;
+      min-width: 170px;
       background-color: #eee;
-    }
-
-    body /deep/ core-dropdown-menu.narrow {
-      max-width: 100px;
-    }
-
-    body /deep/ core-dropdown-menu::shadow #dropdown {
-      background-color: #eee;
+      color: #000;
       border: 1px solid #ccc;
+      border-radius: 3px;
     }
 
-    body /deep/ core-dropdown-menu.constrained::shadow #dropdown {
-      max-height: 500px;
+    core-item {
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
+
+    html /deep/ core-collapse {
+      border: 1px solid #ccc;
+      padding: 8px;
+    }
+
+    .constrained-height {
+      height: 150px;
+    }
+
+    .colored {
+      border: 1px solid #0f9d58;
+      background-color: #b7e1cd;
+      color: #0f9d58;
+    }
+
   </style>
 
 </head>
 <body unresolved>
 
-<polymer-element name="dropdown-demo">
-  <template>
-    <section layout vertical fit>
-      <section layout horizontal>
+  <template is="auto-binding-dart" id="myTemplate">
 
-        <core-dropdown-menu>
-          <template repeat="{{countries}}">
-            <core-item label="{{name}}"></core-item>
-          </template>
-        </core-dropdown-menu>
+    <section>
 
-        <div style="margin:0 12px;">
-          narrow:
-          <core-dropdown-menu class="narrow">
-            <template repeat="{{countries}}">
-              <core-item label="{{name}}"></core-item>
+      <div>Absolutely positioned dropdowns</div>
+
+      <core-dropdown-menu label="Your favorite pastry">
+        <core-dropdown class="dropdown">
+          <core-menu>
+            <template repeat="{{pastries}}">
+              <core-item>{{}}</core-item>
             </template>
-          </core-dropdown-menu>
-        </div>
+          </core-menu>
+        </core-dropdown>
+      </core-dropdown-menu>
 
-        <div flex></div>
+      <br><br>
 
-        <core-dropdown-menu halign="right">
-          <template repeat="{{countries}}">
-            <core-item label="{{name}}"></core-item>
-          </template>
+      <core-dropdown-menu label="Disabled" disabled>
+        <core-dropdown class="dropdown">
+          <core-menu>
+            <core-item>Should not see this</core-item>
+          </core-menu>
+        </core-dropdown>
+      </core-dropdown-menu>
+
+    </section>
+
+    <section>
+
+      <div>Layered dropdowns</div>
+
+      <button id="toggleCollapse">toggle core-collapse</button>
+
+      <br>
+
+      <core-collapse id="collapse">
+
+        <core-dropdown-menu label="Your favorite pastry">
+          <core-dropdown layered class="dropdown">
+            <core-menu>
+              <template repeat="{{pastries}}">
+                <core-item>{{}}</core-item>
+              </template>
+            </core-menu>
+          </core-dropdown>
         </core-dropdown-menu>
 
-      </section>
+      </core-collapse>
 
-      <div flex style="overflow:auto;">
+    </section>
 
-        <br>
+    <section>
 
-        <core-dropdown-menu class="constrained">
-          <template repeat="{{countries}}">
-            <core-item label="{{name}}"></core-item>
-          </template>
-        </core-dropdown-menu>
+      <div>Custom styling</div>
 
-          <p>scroll me...</p>
+      <core-dropdown-menu label="Constrained height">
+        <core-dropdown class="dropdown constrained-height">
+          <core-menu>
+            <template repeat="{{pastries}}">
+              <core-item>{{}}</core-item>
+            </template>
+          </core-menu>
+        </core-dropdown>
+      </core-dropdown-menu>
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <br><br>
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-
-      <section>
-        drop-up:
-        <core-dropdown-menu valign="bottom" valueattr="label" selected="Donut">
-          <core-item label="Croissant"></core-item>
-          <core-item label="Donut"></core-item>
-          <core-item label="Financier"></core-item>
-          <core-item label="Madeleine"></core-item>
-        </core-dropdown-menu>
-      </section>
+      <core-dropdown-menu label="Colored">
+        <core-dropdown class="dropdown colored">
+          <core-menu>
+            <template repeat="{{pastries}}">
+              <core-item>{{}}</core-item>
+            </template>
+          </core-menu>
+        </core-dropdown>
+      </core-dropdown-menu>
 
     </section>
 
   </template>
-  <script type="application/dart" src="core_dropdown_menu.dart"></script>
-</polymer-element>
 
-<dropdown-demo fit></dropdown-demo>
+  <script type="application/dart" src="core_dropdown_menu.dart"></script>
 
 </body>
 </html>
