--- a/example/demo.html
+++ b/example/demo.html
@@ -43,6 +43,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <core-item label="Animation" tag="core-animation" url="core_animation.html"></core-item>
 
+    <core-item label="Animated Pages" tag="core-animated-pages" url="core_animated_pages/music.html"></core-item>
+
     <core-item label="Collapse" tag="core-collapse" url="core_collapse.html"></core-item>
 
     <core-item label="Drag and Drop" tag="core-drag-drop" url="core_drag_drop.html"></core-item>
@@ -55,6 +57,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <core-item label="Field" tag="core-field" url="core_field.html"></core-item>
 
+    <core-item label="Header Panel" tag="core-header-panel" url="core_header_panel.html"></core-item>
+
     <core-item label="Icon" tag="core-icon" url="core_icon.html"></core-item>
 
     <core-item label="Icon Button" tag="core-icon-button" url="core_icon_button.html"></core-item>
@@ -62,6 +66,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <core-item label="Item" tag="core-item" url="core_item.html"></core-item>
 
     <core-item label="Input" tag="core-input" url="core_input.html"></core-item>
+
+    <core-item label="Label" tag="core-label" url="core-label.html"></core-item>
 
     <core-item label="List (Dart)" tag="core-list-dart" url="core_list_dart.html"></core-item>
 
