--- a/test/core_input_basic_test.html
+++ b/test/core_input_basic_test.html
@@ -9,16 +9,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 <html>
   <head>
-    <title>core-localstorage-raw</title>
-
+    <title>core-input basic</title>
     <script src="packages/unittest/test_controller.js"></script>
-    <link rel="import" href="packages/core_elements/core_localstorage_dart.html">
+    <link rel="import" href="packages/core_elements/core_input.html">
   </head>
   <body>
-    <core-localstorage-dart id="localstorage" name="core-localstorage-test">
-    </core-localstorage-dart>
+    <input id="input1" is="core-input" pattern="[abc]*" preventInvalidInput>
 
-    <script type="application/dart" src="core_localstorage_dart_test.dart">
-    </script>
+    <script type="application/dart" src="core_input_basic_test.dart"></script>
   </body>
 </html>
