--- a/test/core_localstorage_dart_raw_test.html
+++ b/test/core_localstorage_dart_raw_test.html
@@ -9,16 +9,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 <html>
   <head>
-    <title>core-localstorage-raw</title>
+    <title>core-localstorage</title>
 
     <script src="packages/unittest/test_controller.js"></script>
     <link rel="import" href="packages/core_elements/core_localstorage_dart.html">
   </head>
   <body>
-    <core-localstorage-dart id="localstorage" name="core-localstorage-test">
-    </core-localstorage-dart>
+    <core-localstorage-dart id="localstorage" name="core-localstorage-test"
+                            useRaw></core-localstorage-dart>
 
-    <script type="application/dart" src="core_localstorage_dart_test.dart">
+    <script type="application/dart" src="core_localstorage_dart_raw_test.dart">
     </script>
   </body>
 </html>
