--- a/test/core_menu_button_test.html
+++ b/test/core_menu_button_test.html
@@ -12,24 +12,32 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <title>core-menu-button</title>
 
     <script src="packages/unittest/test_controller.js"></script>
-    <link rel="import" href="packages/core_elements/core_menu_button.html">
+    <link rel="import" href="packages/core_elements/core_dropdown.html">
     <link rel="import" href="packages/core_elements/core_item.html">
+    <link rel="import" href="packages/core_elements/core_menu_button.html">
 
-    <script type="application/dart" src="core_menu_button_test.dart"></script>
+    <style>
+      core-collapse {
+        border: 1px solid black;
+      }
+  </style>
   </head>
   <body unresolved>
 
-    <!-- overlay should be removed when button is removed while opened -->
-    <template id="removeOpenedOverlay" is="auto-binding-dart">
-      <template if="{{showButton}}">
-        <core-menu-button icon="menu" id="menuButton" selected="0">
+  <!-- overlay should be removed when button is removed while opened -->
+  <template id="removeOpenedOverlay" is="auto-binding-dart">
+    <template if="{{showButton}}">
+      <core-menu-button icon="menu" id="menuButton" selected="0">
+        <core-dropdown id="dropdown" class="dropdown">
           <core-item id="1" label="Menu1"></core-item>
           <core-item id="2" label="Menu2"></core-item>
           <core-item id="3" label="Menu3"></core-item>
           <core-item id="4" label="Menu4"></core-item>
-        </core-menu-button>
-      </template>
+        </core-dropdown>
+      </core-menu-button>
     </template>
+  </template>
 
+    <script type="application/dart" src="core_menu_button_test.dart"></script>
   </body>
 </html>
